--- a/client/styles/Assignment.css
+++ b/client/styles/Assignment.css
@@ -31,14 +31,56 @@ input[type='text']{
     margin: 2rem auto;
 }
 
-table{
-    border-spacing: 1rem 1rem;
+.costTable{
+    border-spacing: 0.7rem;
+    aspect-ratio: 1/1;
 }
 
 td{
-    box-shadow: 0 0 0.2rem black;
-    padding: 0 0.5rem;
-    width: 1.5rem;
-    height: 1.5rem;
+    /* box-shadow: 0 0 0.2rem black; */
+    /* padding: 0 0.5rem; */
+    width: 2rem;
     text-align: center;
+}
+
+.answer > table{
+    aspect-ratio: 1/1;
+}
+
+.answer > table{
+    border: 1px solid;
+}
+
+.answer > table td{
+    padding: 0.2rem;
+    vertical-align: middle;
+    border: 1px solid;
+}
+
+.answer > p {
+    font-weight: lighter;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+
+.cell{
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    outline: none;
+    text-align: center;
+    aspect-ratio: 1/1;
+}
+
+.destination{
+    border-top: 1px solid;
+    border-bottom: 1px solid;
+    border-right: 0px;
+    border-left: 0px;
+}
+
+.origin{
+    border-top: 0px solid;
+    border-bottom: 0px solid;
+    border-right: 1px solid;
+    border-left: 1px solid;
 }
