--- a/client/styles/Simplex.css
+++ b/client/styles/Simplex.css
@@ -1,3 +1,7 @@
+#root{
+    background-color: rgb(254, 247, 255);
+}
+
 .create-container {
     display: flex;
     flex-direction: column;
@@ -25,9 +29,8 @@
     align-items: stretch;
     align-content: stretch;
     flex-wrap: wrap;
-    background-color: rgb(254, 247, 255);
     padding: 5vh 0;
-    box-shadow: 10px 10px 20px rgb(186, 35, 246),-10px -10px 20px rgb(229, 162, 255);
+    box-shadow: 2px 2px 10px rgb(186, 35, 246),-2px -2px 10px rgb(229, 162, 255);
 }
 
 .info{
@@ -48,4 +51,34 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.solve-button{
+    padding: 1vh 2vw;
+}
+
+.model-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+td{
+    border: 1px solid;
+    text-align: center;
+}
+
+tr:nth-child(even){
+    background-color: rgb(241, 255, 225);
+}
+
+tr:nth-child(odd){
+    background-color: rgb(229, 229, 255);
+}
+
+tr:first-child{
+    background-color: rgb(220, 160, 255);
+    color: aliceblue;
+    font-weight: bolder;
+    text-shadow: 0px 0px 2px black;
 }
