--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +39,15 @@
 
 .read-the-docs {
   color: #888;
+} */
+
+
+.main-container{
+	display: flex;
+	gap: 10px;
+	height:100dvh;
+}
+
+.main-content{
+	flex: 1;
 }
