--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,29 +1,33 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+	line-height: 1.5;
+	font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+	/* color-scheme: light dark; */
+	/* color: rgba(255, 255, 255, 0.87); */
+	/* background-color: #242424; */
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  margin: 0;
-  padding: 0;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	padding: 0;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+a{
+	text-decoration: none;
+}
+
+/* a {
+	font-weight: 500;
+	color: #646cff;
+	text-decoration: inherit;
 }
 
 a:hover {
-  color: #535bf2;
-}
+	color: #535bf2;
+} */
 
 /* body {
   margin: 0;
@@ -33,10 +37,10 @@ a:hover {
   min-height: 100vh;
 } */
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+/* h1 {
+	font-size: 3.2em;
+	line-height: 1.1;
+} */
 
 /* button {
   border-radius: 8px;
@@ -57,31 +61,36 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 } */
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+/* @media (prefers-color-scheme: light) {
+	:root {
+		color: #213547;
+		background-color: #ffffff;
+	}
 
-  a:hover {
-    color: #747bff;
-  }
+	a:hover {
+		color: #747bff;
+	}
 
-  /* button {
+	button {
     background-color: #f9f9f9;
-  } */
-}
+  }
+} */
 
 html,
 body {
-  height: 100%;
-  width: 100%;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+	height: 100%;
+	width: 100%;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 #root{
-  height: 100%;
-  width: 100%;
+	display: flex;
+	column-gap: 1dvw;
+	height: 100%;
 }
+
+/* :is(h1,h2,h3,h4,h5,h6){
+	margin: 0;
+} */
