--- a/client/styles/CourseView.css
+++ b/client/styles/CourseView.css
@@ -91,8 +91,12 @@
     width: 100%;
 }
 
-.forum h4{
+.forum-link h4{
     margin: 5px;
     text-align: center;
     font-style: italic;
+}
+
+.course-view-mobile.closed .forum-link{
+    overflow: hidden;
 }
